--- a/source/pug/pages/sitemap.pug
+++ b/source/pug/pages/sitemap.pug
@@ -51,12 +51,8 @@ block main
   -
     const pages = [
       {
-        name: "UI-kit — ui-kit.html",
-        src: "ui-kit.html"
-      },
-      {
-        name: "Главная — index.html",
-        src: "index.html"
+        name: "Анимации — animations.html",
+        src: "animations.html"
       },
     ]
 
