--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/main-nav";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/title";
 @import "blocks/btn";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
