--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -4,12 +4,17 @@
   align-items: flex-start;
   width: 100%;
   margin: 0;
-  font-weight: 500;
   color: $color-night-rider;
+
+  h2 {
+    font-size: 24px;
+    line-height: 27.6px;
+  }
 
   &--h1 {
     font-size: 80px;
     line-height: 80px;
+    font-weight: 500;
 
     @include vp-1023 {
       font-size: 60px;
@@ -19,6 +24,33 @@
     @include vp-767 {
       font-size: 45px;
       line-height: 50px;
+    }
+  }
+
+  &--h2 {
+    font-size: 45px;
+    line-height: 54px;
+    font-weight: 400;
+
+    @include vp-767 {
+      font-size: 34px;
+      line-height: 42px;
+    }
+  }
+
+  &--h3 {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 400;
+
+    @include vp-1023 {
+      font-size: 22px;
+      line-height: 28px;
+    }
+
+    @include vp-767 {
+      font-size: 16px;
+      line-height: 20px;
     }
   }
 }
