--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,11 +24,16 @@
 @import "blocks/footer";
 @import "blocks/modal";
 @import "blocks/title";
+@import "blocks/text";
 @import "blocks/btn";
 @import "blocks/custom-input";
 @import "blocks/custom-toggle";
 @import "blocks/custom-select";
 @import "blocks/input-upload";
+@import "blocks/video";
+@import "blocks/card";
+@import "blocks/cards";
+@import "blocks/intro";
 
 // ---------------------------------
 
