--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -321,6 +321,14 @@ template {
   font-display: swap;
   src: url("../fonts/.woff2") format("woff2");
 }
+/* inter-regular - cyrillic_latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/inter-v12-cyrillic_latin-regular.woff2") format("woff2"), url("/fonts/inter-v12-cyrillic_latin-regular.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 *,
 *::before,
 *::after {
@@ -340,7 +348,7 @@ html {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  font-family: "Placeholder", "Arial", sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -533,58 +541,181 @@ button,
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0 60px;
 }
 @media (max-width: 1439px) {
   .container {
-    padding: 0 32px;
+    padding: 0 48px;
   }
 }
 @media (max-width: 1023px) {
   .container {
-    padding: 0 24px;
+    padding: 0 36px;
   }
 }
 @media (max-width: 767px) {
   .container {
-    padding: 0 16px;
+    padding: 0 18px;
   }
 }
 
 .header {
-  padding: 28px 0;
-  background-color: #2c39f2;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  padding: 15px 0;
+  color: #303030;
+  background-color: transparent;
 }
 .header .container {
+  position: relative;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header__logo {
+  width: 181px;
+  height: 33px;
+  color: inherit;
+  -webkit-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+@media (max-width: 767px) {
+  .header__logo {
+    width: 145px;
+    height: 26px;
+  }
+}
+.header__logo svg {
+  width: 100%;
+  height: 100%;
+}
+.header__toggle::after, .header__toggle::before {
+  background-color: inherit;
+}
+.header.is-menu {
   color: #ffffff;
 }
+.header.is-menu .btn--menu::after, .header.is-menu .btn--menu::before {
+  top: 50%;
+  background-color: #ffffff;
+}
+.header.is-menu .btn--menu::before {
+  -webkit-transform: translateX(0) rotate(-45deg);
+      -ms-transform: translateX(0) rotate(-45deg);
+          transform: translateX(0) rotate(-45deg);
+}
+.header.is-menu .btn--menu::after {
+  -webkit-transform: translateX(0) rotate(45deg);
+      -ms-transform: translateX(0) rotate(45deg);
+          transform: translateX(0) rotate(45deg);
+}
+@media (hover: hover) {
+  .header.is-menu .btn--menu:hover:not(.focus-visible)::before {
+    -webkit-transform: translateX(0) rotate(-40deg);
+        -ms-transform: translateX(0) rotate(-40deg);
+            transform: translateX(0) rotate(-40deg);
+  }
+  .header.is-menu .btn--menu:hover:not(.focus-visible)::after {
+    -webkit-transform: translateX(0) rotate(40deg);
+        -ms-transform: translateX(0) rotate(40deg);
+            transform: translateX(0) rotate(40deg);
+  }
+}
+.header.is-menu .btn--menu.focus-visible:focus::before {
+  -webkit-transform: translateX(0) rotate(-40deg);
+      -ms-transform: translateX(0) rotate(-40deg);
+          transform: translateX(0) rotate(-40deg);
+}
+.header.is-menu .btn--menu.focus-visible:focus::after {
+  -webkit-transform: translateX(0) rotate(40deg);
+      -ms-transform: translateX(0) rotate(40deg);
+          transform: translateX(0) rotate(40deg);
+}
 
+.main-nav {
+  position: absolute;
+  top: 0;
+  height: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: -1;
+  background-color: #303030;
+  -webkit-transition: height cubic-bezier(0.55, 0, 0.44, 1) 1s, -webkit-clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s;
+  transition: height cubic-bezier(0.55, 0, 0.44, 1) 1s, -webkit-clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s;
+  -o-transition: height cubic-bezier(0.55, 0, 0.44, 1) 1s, clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s;
+  transition: height cubic-bezier(0.55, 0, 0.44, 1) 1s, clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s;
+  transition: height cubic-bezier(0.55, 0, 0.44, 1) 1s, clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s, -webkit-clip-path cubic-bezier(0.55, 0, 0.44, 1) 1s;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
+}
+.main-nav .container {
+  height: inherit;
+}
 .main-nav__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 35px;
+  width: 100%;
+  height: 100%;
   margin: 0;
-  margin-right: 20px;
-  margin-left: 60px;
   padding: 0;
   list-style: none;
 }
 .main-nav__item {
-  margin-right: 20px;
+  position: relative;
+  overflow: hidden;
 }
 .main-nav__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 50px;
+  line-height: 60px;
   color: #ffffff;
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 0.6s ease;
+  transition: -webkit-transform 0.6s ease;
+  -o-transition: transform 0.6s ease;
+  transition: transform 0.6s ease;
+  transition: transform 0.6s ease, -webkit-transform 0.6s ease;
+  -webkit-transition-delay: 1s;
+       -o-transition-delay: 1s;
+          transition-delay: 1s;
+}
+@media (max-width: 767px) {
+  .main-nav__link {
+    font-size: 32px;
+    line-height: 40px;
+  }
 }
 .main-nav__link.is-active {
   opacity: 0.6;
 }
-.main-nav__toggle {
-  display: none;
+.main-nav.is-active {
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  height: 100vh;
+  width: 100%;
 }
 
 .footer {
@@ -710,6 +841,80 @@ button,
   pointer-events: auto;
 }
 
+.title {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  margin: 0;
+  color: #303030;
+}
+.title h2 {
+  font-size: 24px;
+  line-height: 27.6px;
+}
+.title--h1 {
+  font-size: 80px;
+  line-height: 80px;
+  font-weight: 500;
+}
+@media (max-width: 1023px) {
+  .title--h1 {
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+@media (max-width: 767px) {
+  .title--h1 {
+    font-size: 45px;
+    line-height: 50px;
+  }
+}
+.title--h2 {
+  font-size: 45px;
+  line-height: 54px;
+  font-weight: 400;
+}
+@media (max-width: 767px) {
+  .title--h2 {
+    font-size: 34px;
+    line-height: 42px;
+  }
+}
+.title--h3 {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 400;
+}
+@media (max-width: 1023px) {
+  .title--h3 {
+    font-size: 22px;
+    line-height: 28px;
+  }
+}
+@media (max-width: 767px) {
+  .title--h3 {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+.text {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: #303030;
+}
+.text p {
+  margin: 0;
+}
+
 .btn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -737,6 +942,69 @@ button,
 }
 .btn.focus-visible:focus {
   opacity: 0.8;
+}
+.btn--menu {
+  position: relative;
+  width: 36px;
+  height: 40px;
+  padding: 0;
+  background-color: transparent;
+}
+.btn--menu::after, .btn--menu::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #303030;
+  left: 0;
+  -webkit-transform: translate(0);
+      -ms-transform: translate(0);
+          transform: translate(0);
+  -webkit-transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
+  -o-transition: transform 0.3s ease, background-color 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, -webkit-transform 0.3s ease;
+}
+.btn--menu::after {
+  bottom: 13px;
+}
+.btn--menu::before {
+  top: 13px;
+}
+@media (hover: hover) {
+  .btn--menu:hover:not(.focus-visible)::before {
+    -webkit-transform: translateX(-4px);
+        -ms-transform: translateX(-4px);
+            transform: translateX(-4px);
+  }
+  .btn--menu:hover:not(.focus-visible)::after {
+    -webkit-transform: translateX(4px);
+        -ms-transform: translateX(4px);
+            transform: translateX(4px);
+  }
+}
+.btn--menu.focus-visible:focus::before {
+  -webkit-transform: translateX(-4px);
+      -ms-transform: translateX(-4px);
+          transform: translateX(-4px);
+}
+.btn--menu.focus-visible:focus::after {
+  -webkit-transform: translateX(4px);
+      -ms-transform: translateX(4px);
+          transform: translateX(4px);
+}
+.btn--menu[aria-pressed=true]::after, .btn--menu[aria-pressed=true]::before {
+  background-color: #ffffff;
+  top: 50%;
+  -webkit-transform: translate(-50% 0) rotate(-45deg);
+      -ms-transform: translate(-50% 0) rotate(-45deg);
+          transform: translate(-50% 0) rotate(-45deg);
+}
+.btn--menu[aria-pressed=true]::after {
+  -webkit-transform: translate(-50% 0) rotate(45deg);
+      -ms-transform: translate(-50% 0) rotate(45deg);
+          transform: translate(-50% 0) rotate(45deg);
 }
 
 .custom-input,
@@ -1591,6 +1859,196 @@ button,
   right: 0;
   bottom: -5px;
   color: #ff0000;
+}
+
+.video {
+  width: 100%;
+  height: 100%;
+}
+.video__player {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  min-height: 115px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+@media (max-width: 767px) {
+  .card {
+    min-height: 70px;
+  }
+}
+.card__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+@media (max-width: 1023px) {
+  .card__link {
+    padding: 15px;
+  }
+}
+
+.cards {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.cards__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
+}
+
+.intro {
+  position: relative;
+  z-index: -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: calc(100 * var(--vh, 1vh));
+  background-color: transparent;
+  overflow: hidden;
+}
+.intro .container {
+  position: relative;
+  z-index: 1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 80px;
+}
+.intro__heading {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  grid-row: 1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr;
+  grid-template-columns: 2fr 1fr;
+  padding: 40px 0 0;
+}
+@media (max-width: 767px) {
+  .intro__heading {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+.intro__heading .intro__text {
+  -ms-grid-column-align: end;
+      justify-self: end;
+  text-align: right;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+@media (max-width: 767px) {
+  .intro__heading .intro__text {
+    -ms-grid-column-align: start;
+        justify-self: start;
+    text-align: left;
+  }
+}
+.intro__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2fr;
+}
+@media (max-width: 1279px) {
+  .intro__content {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+.intro__cards {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
+  gap: 25px 40px;
+}
+@media (max-width: 1279px) {
+  .intro__cards {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+@media (max-width: 767px) {
+  .intro__cards {
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.intro__cards .card__link {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+.intro__cards .title--h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  text-align: right;
+}
+.intro__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  -webkit-filter: contrast(1) sepia(1) grayscale(1) brightness(0.7);
+          filter: contrast(1) sepia(1) grayscale(1) brightness(0.7);
+}
+.intro__bg .video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+.intro__bg video {
+  width: 100%;
+  height: 100%;
 }
 
 /* @mixin hover-focus {
