--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -10,7 +10,7 @@ include ./utils/icon
 include ./utils/img
 include ./utils/picture
 include ./utils/sprite
-include ./utils/title
+include ./utils/video
 
 //- Modals
 
@@ -19,6 +19,10 @@ include ./modals/modal-success
 
 //- Blocks
 
+include ./blocks/text
+include ./blocks/title
+include ./blocks/cards
+include ./blocks/card
 include ./blocks/intro
 
 //- Mixins
