--- a/source/pug/pages/animations.pug
+++ b/source/pug/pages/animations.pug
@@ -1,7 +1,7 @@
 extends ../components/base/layout
 
 block variables
-  - const title = "test - anamations" //- на страницах кроме главной используйте О нас — ProjectName
+  - const title = "test - animations" //- на страницах кроме главной используйте О нас — ProjectName
   - const wrapperMods = ""
   - const hasHeader = true
   - const headerMods = ""
