--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -23,4 +23,55 @@
   @include hover-focus {
     opacity: 0.8;
   }
+
+  &--menu {
+    position: relative;
+    width: 36px;
+    height: 40px;
+    padding: 0;
+    background-color: transparent;
+
+    &::after,
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 2px;
+      background-color: $color-night-rider;
+      left: 0;
+      transform: translate(0);
+      transition: transform $trans-default, background-color $trans-default;
+    }
+
+    &::after {
+      bottom: 13px;
+    }
+
+    &::before {
+      top: 13px;
+    }
+
+    @include hover-focus {
+      &::before {
+        transform: translateX(-4px);
+      }
+
+      &::after {
+        transform: translateX(4px);
+      }
+    }
+
+    &[aria-pressed="true"] {
+      &::after,
+      &::before {
+        background-color: $color-default-white;
+        top: 50%;
+        transform: translate(-50% 0) rotate(-45deg);
+      }
+
+      &::after {
+        transform: translate(-50% 0) rotate(45deg);
+      }
+    }
+  }
 }
