--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -83,7 +83,6 @@
     top: 0;
     left: 0;
     z-index: -1;
-    filter: contrast(1) sepia(1) grayscale(1) brightness(0.7);
 
     .video {
       position: absolute;
@@ -93,8 +92,16 @@
     }
 
     video {
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 104%;
+      height: 104%;
+      max-width: unset;
+      max-height: unset;
+      transform: translate(-50%, -50%);
+
+      filter: contrast(1) sepia(1) grayscale(1) brightness(0.7) blur(8px);
     }
   }
 }
