--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -14,12 +14,15 @@
   }
 
   &__list {
+    position: absolute;
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 35px;
     width: 100%;
     height: 100%;
+    min-height: 100vh !important;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -37,7 +40,6 @@
     color: $color-default-white;
     transform: translateY(100%);
     transition: transform $trans-600;
-    transition-delay: 1s;
 
     @include vp-767 {
       font-size: 32px;
@@ -53,5 +55,10 @@
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     height: 100vh;
     width: 100%;
+
+    .main-nav__link {
+      transition-delay: 0;
+      transform: translateY(0);
+    }
   }
 }
