--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -14,18 +14,23 @@
   }
 
   &__list {
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 35px;
     width: 100%;
     height: 100%;
     min-height: 100vh !important;
-    margin: 0;
-    padding: 0;
+    margin: 70px 0 0;
+    padding: 70px 0;
     list-style: none;
+
+    @include vp-767 {
+      padding: 45px 0 105px;
+      margin: 64px 0 0;
+    }
   }
 
   &__item {
