feat: Добавляет animations blocks

--- a/source/pug/components/blocks/card.pug
+++ b/source/pug/components/blocks/card.pug
@@ -1,4 +1,7 @@
 mixin card(data)
   article.card&attributes(attributes)
-    a.card__link(href=data.href)
-      +title({tag: "h3", text: [data.text]}).card__title.title--h3
+    if data.href !== ""
+      a.card__link(href=data.href)
+        +title({tag: "h3", text: [data.text]}).card__title.title--h3
+    else
+      +text([data.text])
