--- a/source/pug/components/components.pug
+++ b/source/pug/components/components.pug
@@ -24,6 +24,7 @@ include ./blocks/title
 include ./blocks/cards
 include ./blocks/card
 include ./blocks/intro
+include ./blocks/animation
 
 //- Mixins
 
