--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -610,14 +610,12 @@ button,
   background-color: #ffffff;
 }
 .header.is-menu .btn--menu::before {
-  -webkit-transform: translateX(0) rotate(-45deg);
-      -ms-transform: translateX(0) rotate(-45deg);
-          transform: translateX(0) rotate(-45deg);
+  -webkit-transform: translateX(0) rotate(-45deg) translate3d(0, 0, 0);
+          transform: translateX(0) rotate(-45deg) translate3d(0, 0, 0);
 }
 .header.is-menu .btn--menu::after {
-  -webkit-transform: translateX(0) rotate(45deg);
-      -ms-transform: translateX(0) rotate(45deg);
-          transform: translateX(0) rotate(45deg);
+  -webkit-transform: translateX(0) rotate(45deg) translate3d(0, 0, 0);
+          transform: translateX(0) rotate(45deg) translate3d(0, 0, 0);
 }
 @media (hover: hover) {
   .header.is-menu .btn--menu:hover:not(.focus-visible)::before {
@@ -662,7 +660,7 @@ button,
   height: inherit;
 }
 .main-nav__list {
-  position: absolute;
+  position: fixed;
   top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -671,16 +669,22 @@ button,
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   gap: 35px;
   width: 100%;
   height: 100%;
   min-height: 100vh !important;
-  margin: 0;
-  padding: 0;
+  margin: 70px 0 0;
+  padding: 70px 0;
   list-style: none;
+}
+@media (max-width: 767px) {
+  .main-nav__list {
+    padding: 45px 0 105px;
+    margin: 64px 0 0;
+  }
 }
 .main-nav__item {
   position: relative;
@@ -693,9 +697,8 @@ button,
   font-size: 50px;
   line-height: 60px;
   color: #ffffff;
-  -webkit-transform: translateY(100%);
-      -ms-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(100%) translate3d(0, 0, 0);
+          transform: translateY(100%) translate3d(0, 0, 0);
   -webkit-transition: -webkit-transform 0.6s ease;
   transition: -webkit-transform 0.6s ease;
   -o-transition: transform 0.6s ease;
@@ -917,7 +920,13 @@ button,
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   color: #303030;
+  font-size: 18px;
+  line-height: 26px;
 }
 .text p {
   margin: 0;
@@ -1890,7 +1899,25 @@ button,
 }
 @media (max-width: 767px) {
   .card {
-    min-height: 70px;
+    min-height: auto;
+  }
+}
+.card--grey {
+  background-color: #e3e3e3;
+}
+.card--center {
+  padding: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media (max-width: 1023px) {
+  .card--center {
+    padding: 15px;
   }
 }
 .card__link {
@@ -1900,6 +1927,9 @@ button,
   width: 100%;
   height: 100%;
   padding: 20px;
+}
+.card__link[href=""] {
+  pointer-events: none;
 }
 @media (max-width: 1023px) {
   .card__link {
@@ -1974,12 +2004,16 @@ button,
   }
 }
 .intro__heading .intro__text {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
   -ms-grid-column-align: end;
       justify-self: end;
   text-align: right;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: end;
+  line-height: 24px;
 }
 @media (max-width: 767px) {
   .intro__heading .intro__text {
@@ -2060,11 +2094,45 @@ button,
   height: 104%;
   max-width: unset;
   max-height: unset;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%) translate3d(0, 0, 0);
+          transform: translate(-50%, -50%) translate3d(0, 0, 0);
   -webkit-filter: contrast(1) sepia(1) grayscale(1) brightness(0.7) blur(8px);
           filter: contrast(1) sepia(1) grayscale(1) brightness(0.7) blur(8px);
+}
+
+.animation {
+  max-width: 70%;
+  margin: 0 auto;
+  padding: 0 0 90px;
+}
+@media (max-width: 767px) {
+  .animation {
+    max-width: 100%;
+  }
+}
+.animation__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 90px 0 0;
+}
+.animation .title--h2 {
+  margin: 0 0 20px 0;
+}
+.animation .text {
+  gap: 15px;
+}
+.animation__cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 45px 0 0;
 }
 
 /* @mixin hover-focus {
