--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -30,9 +30,11 @@
     }
 
     .intro__text {
+      justify-content: end;
       justify-self: end;
       text-align: right;
       align-items: end;
+      line-height: 24px;
 
       @include vp-767 {
         justify-self: start;
@@ -99,7 +101,7 @@
       height: 104%;
       max-width: unset;
       max-height: unset;
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%) translate3d(0, 0, 0);
 
       filter: contrast(1) sepia(1) grayscale(1) brightness(0.7) blur(8px);
     }
