--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,6 +34,7 @@
 @import "blocks/card";
 @import "blocks/cards";
 @import "blocks/intro";
+@import "blocks/animation";
 
 // ---------------------------------
 
