--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@
 $color-default-black:               #000000;
 $color-default-white:               #ffffff;
 $color-night-rider:                 #303030;
+$color-gainsboro:                   #e3e3e3;
 $color-transparent:                 rgba(255, 255, 255, 0);
 
 // Project palette
