--- a/source/sass/blocks/animation.scss
+++ b/source/sass/blocks/animation.scss
@@ -1,7 +1,13 @@
 .animation {
-  max-width: 70%;
-  margin: 0 auto;
+  position: relative;
+  z-index: 1;
   padding: 0 0 90px;
+  background-color: $color-default-white;
+
+  .container {
+    max-width: 70%;
+    margin: 0 auto;
+  }
 
   @include vp-767 {
     max-width: 100%;
